make sure modal close button is on top, esp. on mobile

--- a/Template_files/w3.css
+++ b/Template_files/w3.css
@@ -313,6 +313,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   right: 25px;
   font-size: 50px;
   font-weight: bold;
+  z-index: 11;
 }
 
 .close:hover,
